--- a/BookStore/Areas/Customer/Views/Home/CategoryDetails.cshtml
+++ b/BookStore/Areas/Customer/Views/Home/CategoryDetails.cshtml
@@ -1,30 +1,23 @@
 ﻿@model IEnumerable<BookStore.Models.Book>
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "CategoryDetails";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<body>
-    <div class="container">
-        <div class="row">
-            @await Html.PartialAsync("_SliderPartialView")
-        </div>
-    </div>
-    <!-- card-list start -->
-    <div class="container mb-5 mt-5">
-        <div class="row">
+<div class="container mb-5 mt-5">
+    <div class="row">
 
-            @await Component.InvokeAsync("LeftCategoryList")
+        @await Component.InvokeAsync("LeftCategoryList")
 
 
-            <div class="col-md-8">
-                <div class="row row-cols-md-4 g-4">
-                    @foreach (var item in Model)
+        <div class="col-md-8">
+            <div class="row row-cols-md-4 g-4">
+                @foreach (var item in Model)
+                {
+                    @if (item.IsActive)
                     {
-                        @if (item.IsActive)
-                        {
-                            
-                        
+
+
                         <div class="col">
                             <div class="card" style="height:385px;">
 
@@ -48,15 +41,12 @@
                                 </div>
                             </div>
                         </div>
-                        }
                     }
+                }
 
-                </div>
             </div>
-
-            @await Component.InvokeAsync("RightNBookList")
         </div>
-    </div>
-    <!-- card-list end -->
 
-</body>
+        @await Component.InvokeAsync("RightNBookList")
+    </div>
+</div>
