--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -54,10 +54,10 @@
                         
 
 
-                        <li class="d-flex" role="search" style="padding-left: 320px">
-                            <input class="form-control mr-2" type="search" placeholder="Aradığınız kitap.." aria-label="Search">
-                            <button class="btn btn-outline-success mr-2" type="submit">Ara</button>
-                        </li>
+                        <form class="form-inline" action="/Customer/Home/Search" role="search" method="post" style="margin:auto;">
+                            <input name="q" class="form-control mr-2" type="search" placeholder="Aradığınız kitap.." aria-label="Search"/>
+                            <button class="btn btn-outline-success mr-2" type="submit"><i class="bi bi-search"></i> Ara</button>
+                        </form>
                        
                     </ul>
                     <partial name="_LoginPartial" />
@@ -95,11 +95,13 @@
         </div>
     </footer>
     <!-- footer end -->
+  
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
     <script src="//cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
+    @await Component.InvokeAsync("NToastNotify")
 </body>
 </html>
